--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #f2d4c2;
+  height: 100px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  position: fixed;
+  width: 100%;
+}
+
+.App-nav-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-left: 40px;
+  margin-right: 40px;  
+}
+
+.nav-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 650px;
+}
+.nav-title {
+  color:black;
+  text-decoration: none;
+  }
+.nav-logo:hover {
+  transform: scale(1.2);
+}
+.nav-about {
+color:black;
+text-decoration: none;
+}
+.nav-about:hover {
+  transform: scale(1.2);
+}
+.nav-portfolio {
+  color:black;
+  text-decoration: none;
+  }
+.nav-portfolio:hover {
+  transform: scale(1.2);
+}
+.nav-services {
+  color:black;
+  text-decoration: none;
+  }
+.nav-services:hover {
+  transform: scale(1.2);
+}
+.nav-contact {
+  color:black;
+  text-decoration: none;
+  }
+.nav-contact:hover {
+  transform: scale(1.2);
+}
+.nav-faq {
+  color:black;
+  text-decoration: none;
+  }
+.nav-faq:hover {
+  transform: scale(1.2);
+}
+
+.App-footer {
+  background-color: #f2d4c2;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  width: 100%;
+  /* text-align: center; */
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+/* @media screen and (min-width: 950px) {
+  html {
+      width: 100%;
+      margin: 0;
+      padding: 0;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+  body {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
 }
+} */
