--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ text-decoration: none;
   font-size: calc(10px + 2vmin);
   color: black;
   width: 100%;
+  font-size: 20px;
   /* text-align: center; */
 }
 
