create login page

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  width: 650px;
+  width: 880px;
 }
 .nav-title {
   color:black;
@@ -80,9 +80,9 @@ text-decoration: none;
 
 .App-footer {
   background-color: #f2d4c2;
-  height: 100px;
+  height: 250px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -92,6 +92,77 @@ text-decoration: none;
   /* text-align: center; */
 }
 
+.app-footer-social {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: space-between;
+}
+
+.app-footer-social-box {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  width: 100px;
+  justify-content: space-between;
+}
+
+.app-footer-icon-instagram:hover {
+  transform: scale(1.2);
+}
+
+.app-footer-icon-facebook:hover {
+  transform: scale(1.2);
+}
+
+.app-footer-link-box {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+}
+
+.footer-home {
+  color:black;
+  text-decoration: none;
+  }
+.footer-home:hover {
+  transform: scale(1.2);
+}
+.footer-about {
+color:black;
+text-decoration: none;
+}
+.footer-about:hover {
+  transform: scale(1.2);
+}
+.footer-portfolio {
+  color:black;
+  text-decoration: none;
+  }
+.footer-portfolio:hover {
+  transform: scale(1.2);
+}
+.footer-services {
+  color:black;
+  text-decoration: none;
+  }
+.footer-services:hover {
+  transform: scale(1.2);
+}
+.footer-contact {
+  color:black;
+  text-decoration: none;
+  }
+.footer-contact:hover {
+  transform: scale(1.2);
+}
+.footer-faq {
+  color:black;
+  text-decoration: none;
+  }
+.footer-faq:hover {
+  transform: scale(1.2);
+}
 
 
 /* @media screen and (min-width: 950px) {
