--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -1,21 +1,25 @@
 .page-contact {
-  margin-top: 100px;
+  padding-top: 10vh;
+  height: 75vh;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
 }
 
 .page-contact-main {
   display: flex;
   flex-direction: row;
-  /* justify-content: center; */
+  align-items: center;
   width: 100%;
 }
 
 .page-contact-map {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  /* margin-top: 100px;
+  margin-bottom: 100px; */
+  height: 100%;
   width: 50%;
   display: flex;
   align-items: center;
