--- a/src/Pages/Faq.css
+++ b/src/Pages/Faq.css
@@ -1,3 +1,10 @@
 .page-faq {
-  margin-top: 100px;
+  padding-top: 10vh;
+  height: 75vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
