--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,7 +1,7 @@
 .App-background-high {
   background-image: url("../panel.jpg");
   height: 800px;
-  margin-top: 100px;
+  margin-top: 10vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  background-color: #f2d4c2
+  /* background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); */
 }
 .App-block-one-image {
   width: 60%;
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: flex-start;
-  background-color: #f2d4c2
+  /* background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); */
 }
 
 .App-block-two-image {
