--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f2d4c2;
-  /* display: flex;
-  flex-direction: column; */
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+  height: 100vh;
+  width: 100vw;
   
 }
 
